# back/src/Routers/NutritionRouter.js
@@ -4,14 +4,15 @@ import { Recommend } from '../modules/RecommendAlgorithm.js';
 
 const nutritionRouter = Router();
 
-
+// recommendSystem
 nutritionRouter.post('/nutrition', async (req, res, next) => {
 	try {
-		const { Age, Sex, Weight, foodList } = req.body;
-        console.log(Age, Sex, Weight, foodList);
+		const { age, sex, weight, foodList } = req.body;
 
 		if (foodList.length == 0) {
 			throw new Error('식사 정보를 입력해주세요.');
+		} else if (age < 15) {
+			throw new Error('현재 15세 미만은 서비스 대상이 아닙니다.');
 		}
 
 		const getFoodList = await NutritionService.getNutritionalFacts({ foodName: foodList });
@@ -20,19 +21,16 @@ nutritionRouter.post('/nutrition', async (req, res, next) => {
 			throw new Error(getFoodList.errorMessage);
 		}
 
-
-		let login = false; //! 로그인 기능을 만든 이후 수정해야함.
-		const { person_info, result } = await Recommend.recommendSystem(
-			Age,
-			Sex,
-			Weight,
+		let isLogin = false; //! 로그인 기능을 만든 이후 수정해야함.
+		const { personInfo, result } = await Recommend.recommendSystem(
+			age,
+			sex,
+			weight,
 			getFoodList,
-			login,
+			isLogin,
 		);
 
-		// Age, Sex, Weight --> 사람 일일 섭취량. 넣자!
-		// eat_result = 먹은음식의 각각의 영양소의 sum. , person_info, result = { [추천음식1], [추천음식2]} .... Done: person_info, result.
-		const bundle = { getFoodList, person_info, result };
+		const bundle = { getFoodList, personInfo, result };
 		res.status(200).json(bundle);
 	} catch (error) {
 		next(error);
@@ -40,7 +38,7 @@ nutritionRouter.post('/nutrition', async (req, res, next) => {
 });
 
 // 음식검색 알고리즘.
-nutritionRouter.get('/nutrition_search/:keyword', async function (req, res, next) {
+nutritionRouter.get('/nutrition_search/:keyword', async (req, res, next) => {
 	try {
 		const foodList = await NutritionService.findFoodName({ keyword: req.params.keyword });
 
